# etymon

./: Cargo.toml  README.md
src/: browser.rs  config.rs  display.rs  etymon.rs  history.rs  main.rs  tui.rs  ui.rs  utils.rs
